--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="css/jquery.countdown.css" rel="stylesheet" type="text/css">
 		      <link href="css/screen.css" rel="stylesheet" type="text/css">
         <link href="css/app.css" rel="stylesheet" type="text/css">
+        <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 		<!-- END stylesheets !-->
 
         <!--[if lt IE 9]>
@@ -91,11 +92,11 @@
 
         <!-- BEGIN: footer !-->
         <footer>
-            <div class="center">
+            <!-- <div class="center">
                 <p class="left">Copyright &copy; 2013 by <a href="#">under404.com</a><br/>
                 [All rights reserved] </p>
                 <p class="right">Created by <a href="http://www.clearmedia.pl">ClearMedia</a></p>
-            </div>
+            </div> -->
         </footer>
         <!-- END: footer !-->
 
